@startuml

' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "Organization" as org {
  id : integer
  --
  name : text
}

entity "Checklist" as che {
  id : integer
  --
  organization_id : integer
  name : text
  description : text
}

entity "Task" as tas {
  id : integer
  --
  checklist_id : integer
  name : text
  description : text
}

entity "User" as use {
  id : integer
  --
  ...internal django fields
}

entity "OrganizationMember" as mem {
  id : integer
  --
  user_id : integer
  organization_id : integer
}

entity "ChecklistParticipation" as e_c {
  id : integer
  --
  user_id : integer
  checklist_id : integer
}

entity "TaskExecution" as e_t {
  id : integer
  --
  user_id : integer
  task_id : integer
  status : text
}

org ||..o{ che
che ||..o{ tas


use ||..o| mem
org ||..o{ mem

use ||..o{ e_c
che ||..o{ e_c
use ||..o{ e_t
tas ||..o{ e_t

@enduml
